force-app/main/default/objects/IPI_Quote__c/IPI_Quote__c.object-meta.xml
<CustomObject>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>IPI_Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>