force-app/main/default/objects/IPI_Quote__c/fields/IP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IP_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>