force-app/main/default/objects/IPI_Quote__c/fields/IPI_Amount__c.field-meta.xml
<CustomField>
    <fullName>IPI_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>