force-app/main/default/objects/IPI_Quote__c/fields/IPI_AmountC__c.field-meta.xml
<CustomField>
    <fullName>IPI_AmountC__c</fullName>
    <formula>IPI_Truck__r.Ipi_SaleValue__c * IP_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>