force-app/main/default/objects/IPI_Quote__c/fields/IPI_Client__c.field-meta.xml
<CustomField>
    <fullName>IPI_Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>