force-app/main/default/objects/IPI_Quote__c/fields/IPI_InitialQuote__c.field-meta.xml
<CustomField>
    <fullName>IPI_InitialQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Quote</label>
    <referenceTo>IPI_Quote__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>