force-app/main/default/objects/IPI_Quote__c/fields/IPI_numberOfRenewalDays__c.field-meta.xml
<CustomField>
    <fullName>IPI_numberOfRenewalDays__c</fullName>
    <label>number of renewal days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>