force-app/main/default/objects/IPI_Quote__c/fields/IPI_Status__c.field-meta.xml
<CustomField>
    <fullName>IPI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IPI_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>reserved</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>