force-app/main/default/objects/IPI_Quote__c/fields/IPI_Truck__c.field-meta.xml
<CustomField>
    <fullName>IPI_Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck</label>
    <referenceTo>Ipi_Truck__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>