force-app/main/default/objects/IPI_Quote__c/fields/IPI_WarrantyCode__c.field-meta.xml
<CustomField>
    <fullName>IPI_WarrantyCode__c</fullName>
    <label>Warranty code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>