force-app/main/default/objects/IPI_Quote__c/recordTypes/new_Bussiness.recordType-meta.xml
<RecordType>
    <fullName>new_Bussiness</fullName>
    <active>true</active>
    <label>new Bussiness</label>
</RecordType>