force-app/main/default/objects/IPI_Quote__c/validationRules/checkstock.validationRule-meta.xml
<ValidationRule>
    <fullName>checkstock</fullName>
    <active>false</active>
    <errorConditionFormula>and(ISPICKVAL(IPI_Status__c ,&apos;reserved&apos;), IP_Quantity__c &gt; IPI_Truck__r.Ipi_StockQuantity__c)</errorConditionFormula>
    <errorMessage>Currently not enough stock.</errorMessage>
</ValidationRule>