force-app/main/default/objects/IPI_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IPI_Truck__c</columns>
    <columns>IPI_Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>