force-app/main/default/objects/IPI_Quote__c/listViews/lpo.listView-meta.xml
<ListView>
    <fullName>lpo</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>po</label>
</ListView>